--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 node_modules
+# ignore files in folder Categories
+Categories
+# but keep the folder
+Categories
